[gd_scene load_steps=3 format=3 uid="uid://4ydf4y6sgq8n"]

[ext_resource type="Script" uid="uid://h7mwt32so6i0" path="res://Scripts/Components/Projectiles/lingering_effect.gd" id="1_jnw74"]
[ext_resource type="Texture2D" uid="uid://c3dmb2nb8xw4r" path="res://Assets/Effects/poison-puddle.png" id="2_jnw74"]

[node name="LingeringEffect" type="Node2D"]
script = ExtResource("1_jnw74")
effect_type = "poison"

[node name="EffectArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="EffectArea"]

[node name="EffectSprite" type="Sprite2D" parent="."]
z_index = -1
texture = ExtResource("2_jnw74")
